<resources>
    <string name="app_name">AppCoordenadasGPSKotlin</string>

    <!-- Textos do App -->
    <string name="txt_coodenadas_gps_kotlin">Coodenadas GPS (Kotlin)</string>
    <string name="txt_valor_0">0.00</string>
    <string name="txt_longitude">Longitude</string>
    <string name="txt_latitude">Latitude</string>
    <string name="cd_pin_gps_no_mapa">Pin GPS no Mapa</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>